# TermSageC-

./: CMakeLists.txt  README.md  documentation.md  response_class.txt  setup.sh
src/: main.cpp
src/AutoCompleteSystem/: autocomplete.cpp
src/ExternalDependencies/: cpp-httplib-no-ssl.h  ollama_fixed.hpp
src/ExternalDependencies/cpp-httplib/: httplib.h
src/ExternalDependencies/ollama/: ollama.hpp.bak
